--- a/NCD HTML forms/NCD HF_HTN_CKD Clinic Visits.html
+++ b/NCD HTML forms/NCD HF_HTN_CKD Clinic Visits.html
@@ -128,7 +128,7 @@
                     <td><obs conceptId="$@creatinine@"/>mmoI/L</td>
                     <td><obs conceptId="$@HGB@"/> (mg/dl)</td>
                     <td><obs conceptId="$@INR@"/></td>
-                    <td><obs conceptId="$@familyPlanning@" answers="$@YES@, $@NO@, $@NOT_APPLICABLE@" answerLabels="yes, no, NA" style="radio"/></td>
+                    <td><obs conceptId="$@familyPlanning@" answerConceptIds ="$@YES@, $@NO@, $@NOT_APPLICABLE@" answerLabels="yes, no, NA"  style="radio"/></td>
                     <td><obs conceptId="$@returnDate@" allowFutureDates="true"/></td>
                 </tr>
                 <tr>
