corrected 'Patient Referred by' concepts question and answers.

--- a/NCD HTML forms/NCD DIABETES:Enrollment form.html
+++ b/NCD HTML forms/NCD DIABETES:Enrollment form.html
@@ -515,7 +515,7 @@
                         <b>REPUBLIC OF RWANDA
                             <br />MINISTRY OF HEALTH</b>
                     </td>
-                    <td><strong>ANTECENDENTS/</strong> PAST HISTORY <br/>
+                    <td><strong>Fiche d'enregistrement du patient/</strong> Diabetes Enrollment form <br/>
                         <b> IMB ID: <lookup class="value"
                                             expression="patientIdentifiers.get(&quot;IMB ID&quot;)" /> <lookup class="value"
                                                                                                                expression="patientIdentifiers.get(&quot;IMB Primary Care Registration ID&quot;)" /></b>
