correcting the extremities and head and neck rows

--- a/Oncology HTML forms--this folder should be moved/Oncology Outpatient Intake Form.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology Outpatient Intake Form.html
@@ -130,7 +130,7 @@
 
         @HAS_ALLERGIES@=fb609db6-b030-4f5b-8823-341dcc240c79
 
-        @DIAGNOSIS_CONFIDENCE@=3f0764f8-174b-482c-b23b-b09b5b6a2fcd
+        @DIAGNOSIS_CONFIDENCE@=75db6878-341b-4d35-b7e4-4650df66db52
         @PATHOLOGICALLY_CONFIRMED@=6baf30ed-ded5-4fe6-b1c4-911b3ca82a74
         @CLINICALLY_CONFIRMED@=54c32730-e200-4e19-a89e-de0ce7eb5f63
         @SUSPECTED@=f18d4b2d-8fa6-44e5-b130-f3819ba412cf
@@ -1652,13 +1652,13 @@ getField('reactionNonCoded3.value')[0].disabled = true;
                 <td><b>Extremities</b><br />
                     <obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@NOT_DONE@" answerLabel="Not done"/></td>
                 <td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@NO_EDEMA@" answerLabel="No Edema"/></td>
-                <!--  <td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@EDEMA@" answerLabel="Edema"/>
+                  <td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@EDEMA@" answerLabel="Edema"/>
                     <obs conceptId="$@EDEMA@" answerConceptId="$@1@" answerLabel="1+"/>
                     <obs conceptId="$@EDEMA@" answerConceptId="$@2@" answerLabel="2+"/>
                     <obs conceptId="$@EDEMA@" answerConceptId="$@3@" answerLabel="3+"/>
                     <br /><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@GROWTH@" answerLabel="mass"/> location: <obs conceptId="$@EXTREMITY_MASS_LOCATION@"/>size: <obs conceptId="$@EXTREMITY_MASS_SIZE@"/> cm
                     <br /> other:<obs conceptId="$@EXTREMITY_ABNORMALITY_TEXT@"/>
-                </td> -->
+                </td>
             </tr>
             <tr >
                 <td><b>Nervous system</b><br />
