--- a/Oncology HTML forms--this folder should be moved/Oncology Visit form v2017-11-23.html
+++ b/Oncology HTML forms--this folder should be moved/Oncology Visit form v2017-11-23.html
@@ -566,7 +566,6 @@
 
 					<td><obs conceptId="$@HEAD_AND_NECK_EXAM@" answerConceptId="$@NO_ABNORMALITIES@" answerLabel="No Abnormalities"/></td>
 					<td><obs conceptId="$@HEAD_AND_NECK_EXAM@" answerConceptId="$@ABNORMAL@" answerLabel="Abnormal"/>:<obs conceptId="$@HEAD_ABNORMAL@"/>
-						<br /> <obs conceptId="$@HEAD_MASS_LOCATION@" answerConceptId="$@GROWTH@" answerLabel="MASS"/>
 						Location:<obs conceptId="$@HEAD_MASS_LOCATION@"/> Size: <obs conceptId="$@HEAD_MASS_SIZE@"/>cm</td>
 				</tr>
 
@@ -633,13 +632,13 @@
 					<td><b>Extremities</b><br />
 						<obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@NOT_DONE@" answerLabel="Not done"/></td>
 					<td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@NO_EDEMA@" answerLabel="No Edema"/></td>
-					<!--  <td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@EDEMA@" answerLabel="Edema"/>
+					  <td><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@EDEMA@" answerLabel="Edema"/>
                         <obs conceptId="$@EDEMA@" answerConceptId="$@1@" answerLabel="1+"/>
                         <obs conceptId="$@EDEMA@" answerConceptId="$@2@" answerLabel="2+"/>
                         <obs conceptId="$@EDEMA@" answerConceptId="$@3@" answerLabel="3+"/>
                         <br /><obs conceptId="$@EXTREMITY_EXAM@" answerConceptId="$@GROWTH@" answerLabel="mass"/> location: <obs conceptId="$@EXTREMITY_MASS_LOCATION@"/>size: <obs conceptId="$@EXTREMITY_MASS_SIZE@"/> cm
                         <br /> other:<obs conceptId="$@EXTREMITY_ABNORMALITY_TEXT@"/>
-                    </td> -->
+                    </td>
 				</tr>
 				<tr >
 					<td><b>Nervous system</b><br />
